--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Ignore directories
-from/
-my/
-results/
+# Ignore contents of directories but keep the directories
+from/*
+my/*
+results/*
+!.gitkeep
