--- a/web/vercel.json
+++ b/web/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "fastapi_server.py",
+      "src": "server.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "fastapi_server.py"
+      "dest": "server.py"
     }
   ]
 }
