feat: 添加图标生成和打包功能，优化窗口图标处理
- 新增get_ico.py脚本用于生成应用程序图标
- 添加auto_pack.py脚本实现自动化打包功能
- 优化compare_excel.py中的图标处理逻辑，支持打包后路径
- 更新.gitignore文件，添加打包相关忽略规则

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # Ignore contents of directories but keep the directories
 from/*
 my/*
-tmp/*
-!tmp/results/
 results/*
-!.gitkeep
+
+# tmp directory rules
+tmp/*
+!tmp/results/     # Keep tmp/results directory
+tmp/results/*     # Ignore files in tmp/results directory
 
 # Ignore Python cache files
 **/__pycache__/
+
+# Ignore EXE file
+exe/EXCEL文件比较工具.exe
